components/microservice2/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice2-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /microservice2
          pathType: Prefix
          backend:
            service:
              name: microservice2-service
              port:
                number: 8000
